--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = None\n",
+    "bag1 = N\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
