--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "bag1 = N\n",
+    "bag1 = ({'marbles': array(['black', 'white'], dtype='<U5'),\n",
+    "   'probs': array([0.4, 0.6])}\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
