Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "import numpy as np\n",
     "bag1 = ({'marbles': array(['black', 'white'], dtype='<U5'),\n",
-    "   'probs': array([0.4, 0.6])}\n",
+    "   'probs': array([0.4, 0.6])})\n",
     "bag2 = None\n",
     "box  = None\n",
     "\n",
