Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,8 @@
     "import numpy as np\n",
     "bag1 = ({'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': array([0.4, 0.6])})\n",
-    "bag2 = None\n",
+    "bag2 = ({'marbles': array(['black', 'white'], dtype='<U5'),\n",
+    "   'probs': array([0.4, 0.6])})\n",
     "box  = None\n",
     "\n",
     "bag1, bag2, box\n",
