--- a/index.ipynb
+++ b/index.ipynb
@@ -73,9 +73,9 @@
     "import numpy as np\n",
     "bag1 = {'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': array([0.4, 0.6])}\n",
-    "bag2 = ({'marbles': array(['black', 'white'], dtype='<U5'),\n",
-    "   'probs': array([0.7, 0.3])})\n",
-    "box  = ([])\n",
+    "bag2 = {'marbles': array(['black', 'white'], dtype='<U5'),\n",
+    "   'probs': array([0.7, 0.3])}\n",
+    "box  = {bags}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
