Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
     "   'probs': array([0.4, 0.6])}\n",
     "bag2 = {'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': array([0.7, 0.3])}\n",
-    "box  = {'bags': array([''])}\n",
+    "box  = {'bags': array([bag1,bag])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
