--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
     "   'probs': array([0.4, 0.6])}\n",
     "bag2 = {'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': array([0.7, 0.3])}\n",
-    "box  = {'bags': array([bag1,bag])}\n",
+    "box  = {'bags': array([bag1,bag2])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
@@ -85,9 +85,9 @@
     "#  {'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "#   'probs': array([0.7, 0.3])},\n",
     "\n",
-    "  {'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.4, 0.6])},\n",
-    "          {'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.7, 0.3])}],\n",
-    "         dtype=object), 'probs': array([0.5, 0.5])})"
+    "#   {'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.4, 0.6])},\n",
+    "#           {'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.7, 0.3])}],\n",
+    "#          dtype=object), 'probs': array([0.5, 0.5])})"
    ]
   },
   {
