--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d64df3b239b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m bag1 = {'marbles': array(['black', 'white'], dtype='<U5'),\n\u001b[0m\u001b[1;32m      3\u001b[0m    'probs': array([0.4, 0.6])}\n\u001b[1;32m      4\u001b[0m bag2 = {'marbles': array(['black', 'white'], dtype='<U5'),\n\u001b[1;32m      5\u001b[0m    'probs': array([0.7, 0.3])}\n",
+      "\u001b[0;32m<ipython-input-3-1dee35deea35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n\u001b[0;32m----> 3\u001b[0;31m    'probs': array([0.4, 0.6])}\n\u001b[0m\u001b[1;32m      4\u001b[0m bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n\u001b[1;32m      5\u001b[0m    'probs': array([0.7, 0.3])}\n",
       "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
      ]
     }
@@ -85,9 +85,9 @@
     "import numpy as np\n",
     "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': array([0.4, 0.6])}\n",
-    "bag2 = {'marbles': array(['black', 'white'], dtype='<U5'),\n",
+    "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': array([0.7, 0.3])}\n",
-    "box  = {'bags': array([bag1,bag2])}\n",
+    "box  = {'bags': np.array([bag1,bag2])}\n",
     "\n",
     "bag1, bag2, box\n",
     "\n",
