--- a/index.ipynb
+++ b/index.ipynb
@@ -66,27 +66,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-1dee35deea35>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n\u001b[0;32m----> 3\u001b[0;31m    'probs': array([0.4, 0.6])}\n\u001b[0m\u001b[1;32m      4\u001b[0m bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n\u001b[1;32m      5\u001b[0m    'probs': array([0.7, 0.3])}\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'array' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['black', 'white'], dtype='<U5'),\n",
+       "  'probs': array([0.4, 0.6])},\n",
+       " {'marbles': array(['black', 'white'], dtype='<U5'),\n",
+       "  'probs': array([0.7, 0.3])},\n",
+       " {'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.4, 0.6])},\n",
+       "         {'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.7, 0.3])}],\n",
+       "        dtype=object)})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
     "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
-    "   'probs': array([0.4, 0.6])}\n",
+    "   'probs': np.array([0.4, 0.6])}\n",
     "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
-    "   'probs': array([0.7, 0.3])}\n",
+    "   'probs': np.array([0.7, 0.3])}\n",
     "box  = {'bags': np.array([bag1,bag2])}\n",
     "\n",
     "bag1, bag2, box\n",
