Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
    "source": [
     "def sample_marble(box):\n",
     "    # randomly choose a bag \n",
-    "   \n",
+    "   np.random.randint(2)\n",
+    "\n",
     "    # randomly choose a marble \n",
     "    return none\n",
     "\n",
