Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,6 +124,7 @@
     "    \n",
     "    # randomly choose a bag \n",
     "    choice=np.random.randint(2)\n",
+    "    baggy=\n",
     "    # randomly choose a marble \n",
     "    return none\n",
     "\n",
