Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
     "    \n",
     "    # randomly choose a bag \n",
     "    choice=np.random.randint(2)\n",
-    "    baggy=box['']\n",
+    "    baggy=box.bags[choice]\n",
     "    # randomly choose a marble \n",
     "    return none\n",
     "\n",
