Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
     "    choice=np.random.randint(2)\n",
     "    baggy=box.bags[choice]\n",
     "    # randomly choose a marble \n",
-    "    return none\n",
+    "    return baggy\n",
     "\n",
     "#sample_marble(box)\n",
     "# 'black' OR 'white'"
