Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
     "    \n",
     "    # randomly choose a bag \n",
     "    choice=np.random.randint(2)\n",
-    "    baggy=box.bags[choice]\n",
+    "    baggy=box['bags'][choice]\n",
     "    # randomly choose a marble \n",
     "    return baggy\n",
     "\n",
