Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,6 +137,8 @@
     "    choice=np.random.randint(2)\n",
     "    baggy=box['bags'][choice]\n",
     "    # randomly choose a marble \n",
+    "    choice=np.random.randint(2)\n",
+    "    marby\n",
     "    return baggy\n",
     "\n",
     "sample_marble(box)\n",
