Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,7 @@
     "    baggy=box['bags'][choice]\n",
     "    # randomly choose a marble \n",
     "    choice=np.random.randint(2)\n",
-    "    marby\n",
+    "    marby=baggy\n",
     "    return baggy\n",
     "\n",
     "sample_marble(box)\n",
