Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -134,7 +134,7 @@
     "def sample_marble(box):\n",
     "    \n",
     "    # randomly choose a bag \n",
-    "    choice=np.random.randint(2)\n",
+    "    baggy= np.random.choice(box['bags'], p = box['probs'])\n",
     "    baggy=box['bags'][choice]\n",
     "    # randomly choose a marble \n",
     "    choice=np.random.randint(2)\n",
