Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,7 +136,7 @@
     "    # randomly choose a bag \n",
     "    baggy= np.random.choice(box['bags'], p = box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    choice=np.random.randint(2)\n",
+    "    marby= np.random.choice(box['bags'], p = box['probs'])\n",
     "    marby=baggy\n",
     "    return baggy\n",
     "\n",
