Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -136,9 +136,8 @@
     "    # randomly choose a bag \n",
     "    baggy= np.random.choice(box['bags'], p = box['probs'])\n",
     "    # randomly choose a marble \n",
-    "    marby= np.random.choice(box['bags'], p = box['probs'])\n",
-    "    marby=baggy\n",
-    "    return baggy\n",
+    "    marby= np.random.choice(marbles['bags'], p = box['probs'])\n",
+    "    return marby\n",
     "\n",
     "sample_marble(box)\n",
     "# 'black' OR 'white'"
