--- a/index.ipynb
+++ b/index.ipynb
@@ -159,8 +159,8 @@
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
     "    # compute fraction of marbles of desired color \n",
-    "    ciunty\n",
-    "    for i in num_samples"
+    "    county\n",
+    "    for i in range(num_samples):"
    ]
   },
   {
