Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,8 @@
     "    # get a bunch of marbles \n",
     "    # compute fraction of marbles of desired color \n",
     "    county\n",
-    "    for i in range(num_samples):"
+    "    for i in range(num_samples):\n",
+    "        "
    ]
   },
   {
