--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
     "    blick=0\n",
     "    whit=0\n",
     "    for i in range(num_samples):\n",
-    "        \n",
+    "        if sample_marble(bo)\n",
     "        "
    ]
   },
