--- a/index.ipynb
+++ b/index.ipynb
@@ -159,10 +159,9 @@
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
     "    # compute fraction of marbles of desired color \n",
-    "    blick=0\n",
-    "    whit=0\n",
+    "    county=0\n",
     "    for i in range(num_samples):\n",
-    "        if sample_marble(bo)\n",
+    "        if sample_marble(box)==color\n",
     "        "
    ]
   },
