Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,11 @@
     "    # compute fraction of marbles of desired color \n",
     "    county=0\n",
     "    for i in range(num_samples):\n",
-    "        if sample_marble(box)==color\n",
+    "        if sample_marble(box)==color:\n",
+    "            county+=1\n",
+    "    return county/1000\n",
+    "\n",
+    "\n",
     "        "
    ]
   },
