Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,9 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.431"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
@@ -165,7 +176,7 @@
     "            county+=1\n",
     "    return county/1000\n",
     "\n",
-    "\n",
+    "probability_of_color('white', box,1000)\n",
     "        "
    ]
   },
