Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.431"
+       "0.447"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# probability_of_color(\"black\", box, num_samples=100000)\n",
+    "probability_of_color(\"black\", box, num_samples=100000)\n",
     "\n",
     "\n",
     "# your answer should be very close to 0.55"
