Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,16 +152,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.447"
+       "0.449"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
     "    for i in range(num_samples):\n",
     "        if sample_marble(box)==color:\n",
     "            county+=1\n",
-    "    return county/1000\n",
+    "    return county/num_samples\n",
     "\n",
     "probability_of_color('white', box,1000)\n",
     "        "
@@ -189,9 +189,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.203"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probability_of_color(\"black\", box, num_samples=100000)\n",
     "\n",
