--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change above code here "
+    "\n",
+    "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
+    "   'probs': np.array([0.4, 0.6])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
+    "   'probs': np.array([0.7, 0.3])}\n",
+    "box  = {'bags': np.array([bag1,bag2]),'probs': np.array([0.5, 0.5])}\n",
+    "\n",
+    "bag1, bag2, box"
    ]
   },
   {
