Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -237,8 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
+    "bag1 = {'marbles': np.array(['black', 'white', 'gray'], dtype='<U5'),\n",
     "   'probs': np.array([0.4, 0.6])}\n",
     "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
     "   'probs': np.array([0.7, 0.3])}\n",
