--- a/index.ipynb
+++ b/index.ipynb
@@ -238,9 +238,9 @@
    "outputs": [],
    "source": [
     "bag1 = {'marbles': np.array(['black', 'white', 'gray'], dtype='<U5'),\n",
-    "   'probs': np.array([4/15, ])}\n",
-    "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'),\n",
-    "   'probs': np.array([0.7, 0.3])}\n",
+    "   'probs': np.array([4/15, 6/15, 5/15])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white', 'gray'], dtype='<U5'),\n",
+    "   'probs': np.array([4/15, 6/15, 5/15])}\n",
     "box  = {'bags': np.array([bag1,bag2]),'probs': np.array([0.5, 0.5])}\n",
     "\n",
     "bag1, bag2, box"
