Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,9 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({'marbles': array(['black', 'white', 'gray'], dtype='<U5'),\n",
+       "  'probs': array([0.26666667, 0.4       , 0.33333333])},\n",
+       " {'marbles': array(['black', 'white', 'gray'], dtype='<U5'),\n",
+       "  'probs': array([0.46666667, 0.2       , 0.33333333])},\n",
+       " {'bags': array([{'marbles': array(['black', 'white', 'gray'], dtype='<U5'), 'probs': array([0.26666667, 0.4       , 0.33333333])},\n",
+       "         {'marbles': array(['black', 'white', 'gray'], dtype='<U5'), 'probs': array([0.46666667, 0.2       , 0.33333333])}],\n",
+       "        dtype=object), 'probs': array([0.5, 0.5])})"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bag1 = {'marbles': np.array(['black', 'white', 'gray'], dtype='<U5'),\n",
     "   'probs': np.array([4/15, 6/15, 5/15])}\n",
@@ -248,11 +265,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33335"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# probability_of_color(\"gray\", box, num_samples=100000)\n",
+    "probability_of_color(\"gray\", box, num_samples=100000)\n",
     "\n",
     "\n",
     "\n",
